--- a/altstyle.css
+++ b/altstyle.css
@@ -85,6 +85,10 @@ main {
     font-size: 1.2rem;
 }
 
+#resume-download { 
+    color: rgb(90, 90, 200);
+}
+
 footer {
     display: flex;
     flex-wrap: wrap;
@@ -113,6 +117,7 @@ a:hover {
 
 img {
     border-radius: 50%;
+    transition: 750ms;
 }
 
 img:hover,
