--- a/style.css
+++ b/style.css
@@ -1,43 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 html, body {
-    min-height: 100vh;
-    display: flex;
-    margin: 0;
-    flex-direction: column;
+    
     background-image: url("purple_clouds.jpg");
     background-size: cover;
     opacity: 0.95;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-#navbar { 
-    display:flex;
-    flex-wrap: wrap;
-    align-content: center;
+body { 
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+li, a, button {
+    text-decoration: none;
+}
+
+header { 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: fixed;
     width: 100%;
     height: 5rem;
     font-size: 24px;
     background-color: rgb(240, 240, 240);
-    margin-bottom: 1rem;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
     opacity: 0.80;
 }
 
-#name {
-    margin-left: 2rem;
+.nav_links {
+    list-style: none;
 }
 
-#navbar-links {
-    display: flex;
-    flex:1;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 5rem;
+.nav_links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+    color: #a67bb3;
+}
+
+#name {
+    margin-left: 2rem;
 }
 
 footer {
