--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header {
     opacity: 0.80;
 }
 
-.nav_links {
+ul {
     list-style: none;
 }
 
@@ -47,11 +47,11 @@ header {
     padding: 0px 20px;
 }
 
-.nav_links li a {
+li a {
     transition: all 0.3s ease 0s;
 }
 
-.nav_links li a:hover {
+li a:hover {
     color: #a67bb3;
 }
 
@@ -59,42 +59,15 @@ header {
     margin-left: 2rem;
 }
 
-footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    background-color: rgb(240, 240, 240);
-    font-size: 20px;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-    margin-top: auto;
-    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-    border-radius: 4px;
-}
-
-footer div{
+main {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-    flex: 1 1 auto;
-    margin-bottom: 2rem;
-    gap: 15px
-}
-
-a {
-    color:inherit;
-    text-decoration: none;
-}
-
-a:visited {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration:underline;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    flex: auto;
+    color: aliceblue;
 }
 
 .about {
@@ -117,6 +90,102 @@ a:hover {
     margin-top: 4rem;
 }
 
+.contact {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contact form{
+    display: flex;
+    align-items:baseline;
+    flex-direction: column;
+}
+
+.contact #send-message{
+  background-color:#a67bb3;
+  border-radius: 8px;
+  border-style: none;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 14px;
+  height: 40px;
+  padding: 10px 16px;
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+.contact #send-message:hover,
+.contact #send-message:focus {
+  background-color: #cea2da;
+}
+
+.personal-website {
+    font-size: 1.2rem;
+}
+
+.resume {
+    flex: none;
+    display: flex;
+    justify-content: space-evenly;
+    /* width: 1000px; */
+}
+
+#resume-imbed {
+    /* width:50%; */
+    align-self: center;
+}
+
+#resume-section {
+    /* width: 50%; */
+    /* justify-content: center; */
+}
+
+#resume-download { 
+    color: rgb(90, 90, 200);
+}
+
+footer {
+    display: flex;
+    flex: none;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    bottom: 0;
+    margin-top: auto;
+    opacity: 0.9;
+    background-color: rgb(240, 240, 240);
+    font-size: 20px;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+}
+
+footer div{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 auto;
+    margin-bottom: 2rem;
+    gap: 15px
+}
+
+
+
+a {
+    color:inherit;
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration:underline;
+}
+
 img {
     border-radius: 50%;
     transition: 750ms;
@@ -125,5 +194,4 @@ img {
 img:hover,
 img:focus {
     width: 350px;
-    
 }
